--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ nav {
     font-size: 55px;
 }
 .hero-circle {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -294,6 +295,23 @@ input::placeholder {
     width: 80vw;
     height: 150px;
     padding: 0 5px;
+}
+
+.price {
+    position: absolute;
+    top: -30px;
+    left: -30px;
+    font-size: clamp(20px, 5vw, 40px);
+    color: rgb(255, 231, 190);
+    background-color: rgb(246, 156, 0);
+    height: 110px;
+    width: 110px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    box-shadow: inset 0px 0px 6px 7px rgba(0, 0, 0, 0.1);
+    padding: 10px 10px;
 }
 
 footer {
